--- a/pom.xml
+++ b/pom.xml
@@ -100,11 +100,16 @@
             <version>2.6</version>
         </dependency>
 
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>3.8.1</version>
+		</dependency>
 
 
 
 
-    </dependencies>
+	</dependencies>
 
 	<build>
 		<plugins>
