--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-qrcode.folder.path=src/test/resources/qrcode
+logging.level.org.springframework.web: DEBUG
+logging.level.org.hibernate: ERROR
+
+qrcode.folder.path=src/main/resources/static/qrcode
+
+spring.datasource.url=jdbc:mysql://localhost/counterclinicdb?serverTimezone=UTC 
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.platform=mysql
