--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ logging.level.org.springframework.web: DEBUG
 logging.level.org.hibernate: ERROR
 
 qrcode.folder.path=src/main/resources/static/qrcode
+qrcode.url.path=qrcode
 
 spring.datasource.url=jdbc:mysql://localhost/counterclinicdb?serverTimezone=UTC 
 spring.datasource.username=root
