--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 # Root logger option
-log4j.rootLogger=DEBUG, file
+log4j.rootLogger=DEBUG, log
 
 # Redirect log messages to console
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
@@ -8,9 +8,9 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
 # Redirect log messages to a log file, support file rolling.
-log4j.appender.file=org.apa.RollingFileAppenderche.log4j
-log4j.appender.file.File=C:\\temp\\counterclinic.log
-log4j.appender.file.MaxFileSize=5MB
-log4j.appender.file.MaxBackupIndex=10
-log4j.appender.file.layout=org.apache.log4j.PatternLayout
-log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+log4j.appender.log=org.apa.RollingFileAppenderche.log4j
+log4j.appender.log.File=C:\\temp\\counterclinic.log
+log4j.appender.log.MaxFileSize=5MB
+log4j.appender.log.MaxBackupIndex=10
+log4j.appender.log.layout=org.apache.log4j.PatternLayout
+log4j.appender.log.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
