add websocket support

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-logging.level.org.springframework.web: DEBUG
-logging.level.org.hibernate: ERROR
+spring.freemarker.template-loader-path:classpath:/templates
 
 qrcode.folder.path=src/main/resources/static/qrcode
 qrcode.url.path=qrcode
