--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,16 +1,9 @@
-# Root logger option
-log4j.rootLogger=DEBUG, log
+# Set root logger level to DEBUG and its only appender to A1.
+log4j.rootLogger=DEBUG, A1
 
-# Redirect log messages to console
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.Target=System.out
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+# A1 is set to be a ConsoleAppender.
+log4j.appender.A1=org.apache.log4j.ConsoleAppender
 
-# Redirect log messages to a log file, support file rolling.
-log4j.appender.log=org.apa.RollingFileAppenderche.log4j
-log4j.appender.log.File=C:\\temp\\counterclinic.log
-log4j.appender.log.MaxFileSize=5MB
-log4j.appender.log.MaxBackupIndex=10
-log4j.appender.log.layout=org.apache.log4j.PatternLayout
-log4j.appender.log.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+# A1 uses PatternLayout.
+log4j.appender.A1.layout=org.apache.log4j.PatternLayout
+log4j.appender.A1.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
