--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,6 +2,8 @@ spring.freemarker.template-loader-path:classpath:/templates
 
 qrcode.folder.path=src/main/resources/static/qrcode
 qrcode.url.path=qrcode
+images.folder.path=src/main/resources/static/images
+images.url=images
 
 spring.datasource.url=jdbc:mysql://206.189.30.73/counterclinicdb?serverTimezone=UTC 
 spring.datasource.username=root
