add walkin patient appointment status

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.datasource.url=jdbc:mysql://localhost/counterclinicdb?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.platform=mysql
+
+jwt.token.secretKey=AZFL7A6wI8ZJjePvyApckCFc2UcluM7fcDNmRHb2QsTmna1RmD0IqJ_O3SJyX
+jwt.token.iss=stacc
