--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,3 +9,6 @@ spring.datasource.url=jdbc:mysql://206.189.30.73/counterclinicdb?serverTimezone=
 spring.datasource.username=root
 spring.datasource.password=P@ssword!
 spring.datasource.platform=mysql
+
+jwt.token.secretKey=AZFL7A6wI8ZJjePvyApckCFc2UcluM7fcDNmRHb2QsTmna1RmD0IqJ_O3SJyX
+jwt.token.iss=stacc
