add test data flyway setup for tests

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,4 +1,5 @@
 spring.freemarker.template-loader-path:classpath:/templates
+spring.flyway.locations=classpath:/db/testdata
 
 qrcode.folder.path=src/test/resources/static/qrcode
 qrcode.url.path=qrcode
@@ -10,9 +11,6 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:db;MODE=MySQL;DB_CLOSE_DELAY=-1
 spring.datasource.username=root
 spring.datasource.password=P@ssword!
-spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 #spring.datasource.url=jdbc:mysql://localhost/counterclinicdb?serverTimezone=UTC
 #spring.datasource.username=root
