--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,7 +8,16 @@ images.url=images
 spring.datasource.url=jdbc:mysql://206.189.30.73/counterclinicdb?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=P@ssword!
-spring.datasource.platform=mysql
+#spring.datasource.platform=mysql
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+spring.flyway.enabled=true 
+spring.flyway.url=jdbc:mysql://206.189.30.73/counterclinicdb?serverTimezone=UTC
+spring.flyway.user=root
+spring.flyway.password=P@ssword!
+
 
 jwt.token.secretKey=AZFL7A6wI8ZJjePvyApckCFc2UcluM7fcDNmRHb2QsTmna1RmD0IqJ_O3SJyX
 jwt.token.iss=stacc
