--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,17 +1,15 @@
-spring.freemarker.template-loader-path:classpath:/templates
+#spring.freemarker.template-loader-path:classpath:/templates
 
 qrcode.folder.path=src/main/resources/static/qrcode
 qrcode.url.path=qrcode
 images.folder.path=src/main/resources/static/images
 images.url=images
 
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://206.189.30.73/counterclinicdb?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=P@ssword!
-#spring.datasource.platform=mysql
-spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.datasource.platform=mysql
 
 spring.flyway.enabled=true 
 spring.flyway.url=jdbc:mysql://206.189.30.73/counterclinicdb?serverTimezone=UTC
