--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,13 @@
 spring.freemarker.template-loader-path:classpath:/templates
+spring.flyway.locations=classpath:/db/testdata
 
 qrcode.folder.path=src/main/resources/static/qrcode
 qrcode.url.path=qrcode
 images.folder.path=src/main/resources/static/images
 images.url.path=images
 
-
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:db;MODE=MySQL;DB_CLOSE_DELAY=-1
-spring.datasource.username=root
-spring.datasource.password=P@ssword!
-
-#spring.datasource.url=jdbc:mysql://localhost/counterclinicdb?serverTimezone=UTC
-#spring.datasource.username=root
-#spring.datasource.password=
-#spring.datasource.platform=mysql
 
 jwt.token.secretKey=AZFL7A6wI8ZJjePvyApckCFc2UcluM7fcDNmRHb2QsTmna1RmD0IqJ_O3SJyX
 jwt.token.iss=stacc
