add explicit mapping for migration classpath

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-#spring.freemarker.template-loader-path:classpath:/templates
+spring.flyway.locations=classpath:/db/migration
 
 qrcode.folder.path=src/main/resources/static/qrcode
 qrcode.url.path=qrcode
